2007-05-08  Chris Toshok  <toshok@hungry.com>

	* compzilla/chrome/content/windowStack.js: document this a little
	bit, fix up some incorrect args to stackWindow, and only dangle
	off the windowStack element those methods which are public.
	Private ones are defined in the local file scope.

2007-05-08  Chris Toshok  <toshok@hungry.com>

	* compzilla/chrome/content/windowStack.js: first pass at the new
	windowstack code.  I've split it out from
	compzillaWindowManager.js but it can't be used until we get the
	mousethrough behavior fixed in mozilla.

2007-05-06  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindowEvents.cpp (Send): New, renamed
	from compzillaWindow::SendWindowEvent.

	* compzilla/src/compzillaControl.cpp: Call
	compzillaWindowEvents::Send instead of SendWindowEvent.
	(Filter): Pass deleted to PropertyChanged.
	(AddWindow): Send "windowCreate" and "windowDestroy" events.

2007-05-01  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/scale.js: resize the test area from
	800x600 to 1024x768.  fix a typo that was causing all scales
	(except for the first window) to be 1.0, causing bizarre shrinkage
	problems.  add the fourth test div.

2007-05-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaWindowEvents.cpp: Add
	compzillaWindowEvent, a single impl of all the new window event
	ifaces.  Use the NS_FORWARD_NSIDOMEVENT macro to forward to an
	inner nsIDOMEvent.

	* compzilla/public/compzillaIWindowEvents.idl: Add
	compzillaIWindowEvent, compzillaIWindowConfigureEvent,
	compzillaIWindowPropertyEvent interfaces passed to
	compzillaIWindow event listeners.

	* compzilla/src/compzillaWindow.cpp (DestroyWindow): Emit
	"destroy" events.
	(MapWindow): Emit "show" events.
	(UnmapWindow): Emit "hide" events.
	(PropertyChanged): Emit "propertyChange" events.  Use SET_PROP
	macro to make this a bit less verbose.
	(WindowConfigured): Emit "moveResize" without coord data yet.